--- a/pandas_training.ipynb
+++ b/pandas_training.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "2    honda   White"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "9           9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "Index(['Make', 'Colour', 'Odometer (KM)', 'Doors', 'Price'], dtype='object')"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "RangeIndex(start=0, stop=10, step=1)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "(10, 5)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "max    213095.000000   5.000000"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
        "10"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "4  Nissan  White         213095      4   $3,500.00"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "3     BMW  Black          11179      5  $22,000.00"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
        "9  Nissan  White          31600      4  $9,700.00"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
        "9  Nissan  White          31600      4  $9,700.00"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
        "'cow'"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1455,7 @@
        "3     BMW  Black          11179      5  $22,000.00"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
        "Name: Make, dtype: object"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "Name: Make, dtype: object"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
        "Name: Make, dtype: object"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
        "8  Toyota  White          60000      4  $6,250.00"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1767,7 @@
        "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1852,7 +1852,7 @@
        "Toyota  1  3  0"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
        "Toyota   85451.250000   3.75"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +1953,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
        "Name: Price, dtype: int32"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2051,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2060,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -2090,7 +2090,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2107,6 +2107,13 @@
    ],
    "source": [
     "car_sales['Price'].hist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Manipulate Data"
    ]
   },
   {
